src/components/Search/Search.module.scss
@use '../../styles/base' as b;
@use '../../styles/mixins' as m;

.wrapper {
  background-color: b.$white;
  width: b.$content-width-mobile;
  border-radius: 15px;
  padding: 1rem;
  display: flex;
  align-items: center;
  flex-direction: column;

  @media (min-width: b.$breakpoint-tablet) {
    width: b.$content-width-tablet;
  }
  @media (min-width: b.$breakpoint-desktop) {
    width: b.$content-width-desktop;
  }
}

.topRow {
  height: 44px;
  width: 100%;
  margin-bottom: 6px;
  display: flex;
  justify-content: center;

  @media (min-width: b.$breakpoint-tablet) {
    justify-content: space-between;
  }
}

.choiceGroup {
  width: 100%;
  @media (min-width: b.$breakpoint-desktop) {
    display: flex;
  }
}

.choiceRow {
  width: 100%;

  @media (min-width: b.$breakpoint-tablet) {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
}

.choiceFields {
  width: 100%;
  display: flex;
  flex-wrap: wrap;

  @media (min-width: b.$breakpoint-desktop) {
    flex-wrap: nowrap;
  }
}

.joined {
  @media (min-width: b.$breakpoint-tablet) {
    * {
      max-width: none;
    }

    :first-child {
      margin-right: 0;
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
    }

    :nth-child(3) {
      margin-left: 0;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
      border-left: none;
    }
  }
}

.inlineSpacing {
  justify-content: space-evenly;
}

.swapBtn {
  @media (min-width: b.$breakpoint-tablet) {
    @include m.flex-centered;
    margin-top: 10px;

    &:after {
      content: ' ';
      background-image: url('../../assets/icons/swapArrows.svg');
      background-size: 12px 12px;
      background-position: center;
      background-repeat: no-repeat;
      position: absolute;
      width: 35px;
      height: 35px;
      border-radius: 50%;
      background-color: b.$white;
      border: 1px solid b.$outlineGrey;
      z-index: 1000;
      cursor: pointer;
    }
  }
}

.btnWrapper {
  height: 54px;

  @media (min-width: b.$breakpoint-desktop) {
    height: 74px;
    width: 200px;
  }
}

